--- a/sites/all/themes/newhopeks/less/page.less
+++ b/sites/all/themes/newhopeks/less/page.less
@@ -376,7 +376,7 @@
 	.hero {
 		display: block;
 		.make-xs-column(12);
-		margin: 0 0 @grid-gutter-width 0;
+		margin: 0 0 (@grid-gutter-width / 2) 0;
 
 		.hero__item {
 			position: relative;
@@ -489,6 +489,7 @@
 
         .hero {
 	        margin-top: -(@grid-gutter-width + 1);
+	        margin-bottom: @grid-gutter-width;
 
             .hero__item {
 	            padding: 0;
